changing up some footer / title information

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,15 +27,12 @@
         <div class="footer">
           <div class="contact">
             <p>
-              taijin<br />
-              What You Are<br />
-              your@email.com
+              taijin
             </p>
           </div>
           <div class="contact">
             <p>
-              <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-              <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
+              <a href="http://github.com/taijinlee/">github.com/taijinlee</a><br />
             </p>
           </div>
         </div>
