--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,8 +53,12 @@
       </div>
     </div> <!-- /container -->
 
+    <script>
+    </script>
+
 
     <script>
+      {% include util.js %}
       {% include analytics.js %}
     </script>
 
